# app/routes.js
@@ -56,7 +56,7 @@ export default (app, passport) => {
       })
     );
 
-  app.route("/customer-register")
+  app.route("/register/customer")
     .post(async (req, res) => {
       let password = bcrypt.hashSync(req.body.password, 8);
       //check if id exist in database if yes => Show already exist
@@ -80,7 +80,7 @@ export default (app, passport) => {
     })
 
   app
-    .route("/cust/:id/create")
+    .route("/customer/:id")
     .post(async (req, res) => {
       const addedTicket = await TicketCtrl.addTickets({ custId: req.params.id, ...req.body });
       res.json(addedTicket);
@@ -88,7 +88,7 @@ export default (app, passport) => {
     );
     
   app
-    .route("/cust/:id/tickets")
+    .route("/tickets/:id")
     .get(async (req, res) => {
       const tickets = await TicketCtrl.listTickets({ custId: req.params.id });
       res.send(tickets)      
@@ -96,40 +96,46 @@ export default (app, passport) => {
      );
 
   app
-    .route("/cust/:id/active")
+    .route("/customer/:id/dashboard")
     .get(async (req, res)=>{
-      const activeTickets = await TicketCtrl.listTickets({custId: req.params.id, status : "A"})
+       const ticketDetails = await TicketCtrl.dashboard({custId: req.params.id})
+       const closedTickets = await TicketCtrl.listTickets({custId: req.params.id, status : "C"})
+       const activeTickets = await TicketCtrl.listTickets({custId: req.params.id, status : "A"})
+       const totalTickets = await TicketCtrl.listTickets({ custId: req.params.id });
+ 
+       const ticketLength = {
+         closed: closedTickets.data.length,
+         active : activeTickets.data.length,
+         total : totalTickets.data.length
+       }
+       const data = {
+         ...ticketDetails,
+         ...ticketLength
+       }
+       res.send({data});
+     })
+
+  app
+    .route("/tickets/:id/:status")
+    .get(async (req, res)=>{
+      const activeTickets = await TicketCtrl.listTickets({custId: req.params.id, status : req.params.status})
       res.send(activeTickets);
     })
     
-  app
-    .route("/cust/:id/closed")
-    .get(async (req, res)=>{
-      const closedTickets = await TicketCtrl.listTickets({custId: req.params.id, status : "C"})
-      res.send(closedTickets);
-    })
+  // app
+  //   .route("/customer/:id/:status")
+  //   .get(async (req, res)=>{
+  //     const closedTickets = await TicketCtrl.listTickets({custId: req.params.id, status : req.params.status})
+  //     res.send(closedTickets);
+  //   })
 
   app
-    .route("/cust/:id/ticket/:_id")
+    .route("/customer/:_id")
     .get(async (req, res)=>{
-      const ticketDetails = await TicketCtrl.listTickets({custId: req.params.id, _id : req.params._id})
+      const ticketDetails = await TicketCtrl.listTickets({_id : req.params._id})
       res.send(ticketDetails);
     })
 
-  app
-    .route("/cust/:id/dashboard")
-    .get(async (req, res)=>{
-      const ticketDetails = await TicketCtrl.dashboard({custId: req.params.id})
-      const closedTickets = await TicketCtrl.listTickets({custId: req.params.id, status : "C"})
-      const activeTickets = await TicketCtrl.listTickets({custId: req.params.id, status : "A"})
-      const totalTickets = await TicketCtrl.listTickets({ custId: req.params.id });
-
-      const ticketLength = {
-        closed:closedTickets.ticket.length,
-        active : activeTickets.ticket.length,
-        total : totalTickets.ticket.length
-      }
-      res.send({...ticketLength, ticketDetails});
-    })
+  
 
 };
