# swagger.yaml
@@ -16,14 +16,14 @@ schemes:
 tags:
   - name: auth
     description: all functions related user accounts
-  - name : ticketSupport
+  - name : ticketSupportCustomer
     description : all functions related customer
 
 paths:
-  /customer-register:
+  /register/customer:
     post:
       tags:
-        - "ticketSupport"
+        - "ticketSupportCustomer"
       summary: customer login
       operationId: customerRegistor
       consumes:
@@ -44,7 +44,7 @@ paths:
                 type : string
               address:
                 type : string
-              contactNo:
+              mobile:
                 type : string
               password:
                 type: string
@@ -55,10 +55,10 @@ paths:
           schema:
             $ref: "#/definitions/ApiResponse"
 
-  /cust/{id}/create:
+  /customer/{id}:
     post:
       tags:
-        - "ticketSupport"
+        - "ticketSupportCustomer"
       summary:  create ticket
       operationId: createticket
       consumes:
@@ -67,23 +67,130 @@ paths:
       produces:
         -application/json
       parameters:
+        - in: path
+          name: id
+          description: id  of the customer
+          required: true
+          type: string
         - in: body
           name: body
           required: true
           schema:
             type: object
             properties:
-              reason:
+              title:
                 type : string
               description:
                 type : string
-              status:
-                type : string
+              custId : id
+              comments :
+                type : array
+                items : 
+                  type : object
+              
       responses:
         "200":
           description: successful operation
           schema:
             $ref: "#/definitions/ApiResponse"
+
+  /tickets/{id}:
+    get:
+      tags:
+        - "ticketSupportCustomer"
+      summary:  list of tickets
+      operationId: ticketsList
+      consumes:
+        -application/json
+
+      produces:
+        -application/json
+      parameters:
+        - in: path
+          name: id
+          description: id of the customer
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ApiResponse"
+   
+  /tickets/{id}/{status}:
+    get:
+      tags:
+        - "ticketSupportCustomer"
+      summary:  list of active tickets
+      operationId: activeTicketsList
+      consumes:
+        -application/json
+
+      produces:
+        -application/json
+      parameters:
+        - in: path
+          name: id
+          description: id of the customer
+          required: true
+          type: string
+        - in: path
+          name: status
+          description: status of the tickets
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ApiResponse"          
+  
+  /customer/{id}/dashboard:
+    get:
+      tags:
+        - "ticketSupportCustomer"
+      summary:  dashboard of the customer
+      operationId: customerDashboard
+      consumes:
+        -application/json
+
+      produces:
+        -application/json
+      parameters:
+        - in: path
+          name: id
+          description: id of the customer
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ApiResponse" 
+          
+
+  /customer/{_id}:
+    get:
+      tags:
+        - "ticketSupportCustomer"
+      summary:  details of the ticket
+      operationId: ticketDetail
+      consumes:
+        -application/json
+
+      produces:
+        -application/json
+      parameters:
+        - in: path
+          name: _id
+          description: _id of the ticket
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ApiResponse" 
 
   /login:
     post:
@@ -138,7 +245,38 @@ paths:
               userType:
                 type: string
                 default : "user"
-  
+
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ApiResponse"
+    get:
+         tags:
+           - "auth"
+         summary: Get all users details
+         operationId: getAllUsers
+         consumes:
+           - application/json
+
+         produces:
+           - application/json
+         security:
+             - bearerAuth: []
+         responses:
+           '200':
+             description: successful operation
+             schema:
+               $ref: '#/definitions/ApiResponse'
+
+  /user/{_id}:
+    get:
+      tags:
+        - "auth"
+      summary: Get user details
+      operationId: getUser
+      consumes:
+        - application/json
 
       produces:
         - application/json
